--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.13.1
 blinker==1.7.0
 click==8.1.7
+dominate==2.9.1
 Flask==3.0.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
@@ -17,5 +19,6 @@ PyMySQL==1.1.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.27
 typing_extensions==4.9.0
+visitor==0.1.3
 Werkzeug==3.0.1
 WTForms==3.1.2
