--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.13.1
+Babel==2.14.0
 blinker==1.7.0
 click==8.1.7
 dominate==2.9.1
 Flask==3.0.2
+flask-babel==4.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
@@ -19,6 +21,7 @@ packaging==24.0
 PyJWT==2.8.0
 PyMySQL==1.1.0
 python-dotenv==1.0.1
+pytz==2024.1
 SQLAlchemy==2.0.27
 typing_extensions==4.9.0
 visitor==0.1.3
